adding index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Page Title</title>
+    <title>Page title</title>
 </head>
 <body>
-
+<p>Hello world</p>
 </body>
 </html>
