adding index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    
+    <script src="https://static.rechargecdn.com/assets/storefront/recharge-client-1.25.3.min.js"></script>
+    
     <meta charset="UTF-8">
     <title>Page title</title>
 </head>
